# miesmuschel

./: .gitignore
chatter/: pom.xml
chatter/miesmuschel/: pom.xml
chatter/miesmuschel/src/test/java/chatter/: AppTest.java
chatter/src/main/java/chatter/: App.java
chatter/src/main/java/chatter/model/: Conversation.java  ConversationTo.java  MessageTo.java
chatter/src/main/java/chatter/openai/: OpenAI.java
chatter/src/main/java/chatter/persistence/: ConversationRepository.java
chatter/src/main/java/chatter/service/rest/v1/: ConversationService.java  MessageService.java
speecher/: Dockerfile  pyproject.toml  requirements.txt
speecher/audio/: record.py
speecher/speech_parser/: text_to_speech.py
speecher/src/: speecher.py
speecher/src/audio/: const.py  convert.py  play.py  record.py
speecher/src/chatter/: client.py
speecher/src/speech_parser/: detect_language.py  speech_to_text.py  text_to_speech.py
